days. 


april 2010
* fixed bug
http://sourceforge.net/tracker/?func=detail&aid=2982092&group_id=221048&atid=1052162
* Catalan translation, thanks to Marti Ruiz-Altaba
* Changed repo into Mercurial, removed MAW releases and replaced by a script 
  which downloads the sources automatically and takes care about some more things.
* All po files in one directory now.

february 2010
* Polish translation, thanks to Przemyslaw Dabek

october 2009 
* derivatives: test a#b replaced by fullratsimp(a-b)#0 --- fix for 
       sqrt(x**2+y**2)/y+y**4/4+x**2*y/2-y**3/2*sqrt((x/y)**2+1)+1/2*x*sqrt(x**2+y**2)
* graphs: strict policy which disallows to biuld more than one animation on
       the server at given time

july 2009
* autonomous systems: print eigenvalues when looking for stationary point
* developement frozen till September ---- hollidays :)

june 2009
* minor fix for LDE like y''+2.5*y'=exp(-x) ... coefficients passed to radcan first

may 2009
* the name of maxima executable is in a PHP variable. This allows to
  switch between diferent maxima versions easily
* ODE: added support for exact equations
* ODE: changed behavior: the expression from the second field 
  is passed to formconv and Maxima solver and solved with respect to y'.
  If the solution is unique, the result is passed to stepwise solver
  automatically.  
* minmax3d: added more simplifications to derivatives and improved test 
  if a point is stationary point: (1-sqrt(6),0) has not been reported as
  stationary point of y**3+y*x**2-2*x*y-5*y

april 2009
* domains of functions: reversed order of inequalities and fixed solve command
* fixed derivative of some complicated expression with quotient, 
    like x*%e**(-1/(x+2))/(x+2)**(2)+x*%e**(-1/(x+2))
* fixed derivatives like x^(exp(x))
* double integral: Numerical evaluation when chekcking region. 
    Fix for  integral of exp(y), y=0..log(9), x=exp(y)..9, dx dy
* graphs: fix for functions like 4^(-x)  ... these functions are