@@ -3,10 +3,9 @@ We use gettext and hence it is pretty simple to translate all messages in
 MAW. To translate MAW you have to add translation to text strings located in two .po
 files. English po files (en_US.po) are good start for this task.
 
-<li> <a href="http://mathassistant.hg.sourceforge.net/hgweb/mathassistant/maw-html/file/8234bddfc707/locale">Input forms</a> (English skeleton, translations into Catalan, Czech and Polish)
+<li> <a href="http://bitbucket.org/robert.marik/maw-html/src/tip/locale/">Input forms</a> (English skeleton, translations into Catalan, Czech and Polish)
 
-<li> <a href="http://mathassistant.hg.sourceforge.net/hgweb/mathassistant/maw/file/5074244ce20b/locale">Server side applications</a> (English skeleton, translations into Catalan and Czech)
-
+<li> <a href="http://bitbucket.org/robert.marik/maw/src/tip/locale/">Server side applications</a> (English skeleton, translations into Catalan and Czech)
 
 Let us know at the address    marik at mendelu dot cz
 </pre>
